authenticate with github token during linkcheck

--- a/.github/workflows/docs_build_and_deploy.yml
+++ b/.github/workflows/docs_build_and_deploy.yml
@@ -30,6 +30,8 @@ jobs:
       - uses: neuroinformatics-unit/actions/build_sphinx_docs@main
         with:
           use-artifactci: lazy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   deploy_sphinx_docs:
     name: Deploy Sphinx Docs
